--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,4 @@
 
-
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -8,9 +7,8 @@
     year = {2023},
     url = {https://www.R-project.org/},
   }
-  
-  
-@Article{thereferencecanbewhatever,
+
+@Article{tidyverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -19,56 +17,54 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
-  
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
+  }
+
+@Book{rohan,
+    title = {Telling Stories with Data},
+    author = {Rohan Alexander},
+    year = {2023},
+    month = 07,
+    address = {Boca Raton},
+    publisher = {CRC Press},
+    url = {https://tellingstorieswithdata.com/},
+  }
+
+@Manual{janitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2023},
+    note = {R package version 2.2.0},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
+
+@Manual{opendatatoronto,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
+  }
+
+@Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
     year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
   
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
+@Misc{globalnews2023,
+    author = {Ryan Rocca & Ahmar Khan},
+    title = {Woman dragged to ground, suffers life-altering injuries in Toronto dog attack},
+    year = {2023},
+    url = {https://globalnews.ca/news/10284422/woman-dragged-to-ground-life-altering-injuries-toronto-dog-attack/},
+    note = {Accessed: 2023-09-24}
 }
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
+@Misc{mountsinai2023,
+    author = {Mount Sinai},
+    title = {Animal Bites: Self-Care Instructions},
+    year = {2023},
+    url = {https://www.mountsinai.org/health-library/selfcare-instructions/animal-bites-self-care},
+    note = {Accessed: 2023-09-24}
   }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
-  
-  
-@Article{rohan,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
