--- a/paper/references.bib
+++ b/paper/references.bib
@@ -19,6 +19,30 @@
     doi = {10.21105/joss.01686},
   }
 
+  @Book{ggplot,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+  
+  @Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+    year = {2023},
+    note = {R package version 1.1.3},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+
+  @Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  
 @Book{rohan,
     title = {Telling Stories with Data},
     author = {Rohan Alexander},
@@ -27,14 +51,6 @@
     address = {Boca Raton},
     publisher = {CRC Press},
     url = {https://tellingstorieswithdata.com/},
-  }
-
-@Manual{janitor,
-    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
-    author = {Sam Firke},
-    year = {2023},
-    note = {R package version 2.2.0},
-    url = {https://CRAN.R-project.org/package=janitor},
   }
 
 @Manual{opendatatoronto,
@@ -68,3 +84,27 @@
     url = {https://www.mountsinai.org/health-library/selfcare-instructions/animal-bites-self-care},
     note = {Accessed: 2023-09-24}
   }
+  
+@Misc{calmcanine2020,
+    author = {Calm Canine Academy},
+    title = {Let’s Talk About Dog Attacks},
+    year = {2020},
+    url = {https://www.calmcanineacademy.com/blog/2020/11/06/let-s-talk-about-dog-attacks},
+    note = {Accessed: 2023-09-24}
+}
+
+@Misc{cbc2023,
+    author = {Muriel Draaisma},
+    title = {Toronto's new rules for dangerous dog owners},
+    year = {2023},
+    url = {https://www.cbc.ca/news/canada/toronto/dangerous-dog-owners-new-rules-city-toronto-1.7183803},
+    note = {Accessed: 2023-09-24}
+}
+
+@Misc{toronto2023,
+    author = {City of Toronto},
+    title = {Dogs Issued Dangerous Dog Orders},
+    year = {2023},
+    url = {https://open.toronto.ca/dataset/dogs-issued-dangerous-dog-orders/},
+    note = {Accessed: 2023-09-24}
+}
