--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -3,7 +3,6 @@ title: "Data analysis of dangerous dog attack"
 subtitle: "Analyzing the circumstance of dog attack and compare data to find out the most dangerous breed"
 author: 
   - Yuanchen Miao
-  - Another author
 thanks: "Code and data are available at: https://github.com/NevaeH-9/dangerous-dog-attack.git."
 date: 24 september 2024
 date-format: long
@@ -20,24 +19,145 @@ bibliography: references.bib
 
 library(tidyverse)
 library(here)
+library(dplyr)
 ```
 
 
 
 # Introduction {#sec-introduction}
 
-You can and should cross-reference sections and sub-sections. We use @citeR and @rohan.
+Since a lot of people are owning dogs nowadays and dogs have possibility to be triggered to attack people with a lot of different [reasons](https://www.calmcanineacademy.com/blog/2020/11/06/let-s-talk-about-dog-attacks), like barriers, resources, 'trigger stacking'[@calmcanine2020], there are a lot of people reporting they are getting attack by dogs every year. There are [2726 service requests](https://www.cbc.ca/news/canada/toronto/dangerous-dog-owners-new-rules-city-toronto-1.7183803#:~:text=Toronto%20Animal%20Services%20investigates%20all,increase%20from%202%2C653%20in%202022.) for potentially dog attack in '2023'[@cbc2023].
 
-The remainder of this paper is structured as follows. @sec-data....
+# Data {#sec-data}
 
+## Overview {#sec-data-overview}
+The dataset '"About registry of Dogs Subject to and Issued a Dangerous Dog Order" '[@toronto2023]has been used in this paper to analyze what breed of dogs are tend to be more aggressive and what breed of dogs is making worse attack circumstances. 'Programming language R'[@citeR] is been used in this paper to clean and analyze the dataset. Packages that could installed in R: 'tidyverse'[@tidyverse], 'ggplot2'[@ggplot], 'dplyr'[@dplyr], 'here'[@here] and ‘opendatatoronto'[@opendatatoronto]are used to download the dataset to R and making test to the dataset.
 
+## Results {#sec-data-results}
+```{r}
+#| echo: false
+#| warning: false
+#| message: false
 
-
-
-
+cleaned_data <- read_csv(here::here("data/analysis_data/analysis_data.csv"))
+```
+Loading data with the programming language 'R'[@citeR] and package 'here'[@here], graphs are generate by using the package 'tidyverse'[@tidyverse] and 'ggplot2'[@ggplot]. Codes are adapted from 'Tellingstorieswithdata' [@rohan]
 
 \newpage
 
+```{r}
+#| label: fig-1
+#| fig-cap: "Number of dogs that have been issued as a dangerous dog in Toronto" 
+#| warning: false
+#| message: false
+#| echo: false
+
+cleaned_data1 <- cleaned_data %>%
+  mutate(Year = year(as.Date(Date_of_Dangerous_Act))) 
+
+cleaned_data1 |>
+  ggplot(aes(x = Year)) +
+  geom_bar() +
+  theme_minimal() + 
+  labs(title = "Number of dangerous dog order in Toronto by year",
+       x = "Year", y = "Dangerous act"
+       ) 
+```
+More dogs are issued as dangerous dog between year 2022 to 2024(@fig-1)
+
+```{r}
+#| label: fig-2
+#| fig-cap: "Number of different attack circumstance " 
+#| warning: false
+#| message: false
+#| echo: false
+
+cleaned_data1 |>
+  ggplot(aes(x = Bite_Circumstance)) +
+  geom_bar() +
+  theme_minimal() + 
+  labs(title = "number of different bite circumstances",
+       x = "Bite circumstances", y = "number of bite circumstances"
+       ) 
+```
+The figure shows that the circumstances of bite by dogs (@fig-2)
+
+```{r}
+#| label: fig-3
+#| fig-cap: "Breed of dogs that has dangerous act above the mean of dangerous dog order" 
+#| warning: false
+#| message: false
+#| echo: false
+
+breed_counts <- cleaned_data %>%
+  group_by(Breed) %>%
+  summarise(Num_Dangerous_Acts = n())
+
+mean_value <- mean(breed_counts$Num_Dangerous_Acts)
+
+filtered_breeds <- breed_counts %>%
+  filter(Num_Dangerous_Acts > mean_value)
+
+ggplot(data = filtered_breeds, aes(x = Breed, y = Num_Dangerous_Acts, fill = Breed)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Dog Breeds with Dangerous Acts Above the Mean",
+       x = "Breed of Dog",
+       y = "Number of Dangerous Acts") +
+  theme_minimal() +
+  theme(
+    legend.position = "none",axis.title.x = element_text(size = 1), axis.text.x = element_text(size = 6)
+  )
+```
+If the breed of dog contains the gene of BULLDOG ro SHEPHERD, they are tend to be more aggressive.@fig-3
+
+```{r}
+#| label: fig-4
+#| fig-cap: "Number of severe each breed of dog caused" 
+#| warning: false
+#| message: false
+#| echo: false
+
+severe_counts <- cleaned_data %>%
+  filter(Bite_Circumstance == "SEVERE") %>%
+  group_by(Breed) %>%
+  summarise(Num_severe = n())
+
+mean_value <- mean(severe_counts$Num_severe)
+
+filtered_breeds1 <- severe_counts %>%
+  filter(Num_severe > mean_value)
+
+# Create the bar plot
+ggplot(data = filtered_breeds1, aes(x = Breed, y = Num_severe, fill = Breed)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Number of 'severe' Reports by Dog Breed",
+       x = "Breed of Dog",
+       y = "Number of 'severe' Reports") +
+  theme_minimal() +
+  theme(legend.position = "none", axis.text.x = element_text(size = 6))
+```
+
+```{r}
+#| label: fig-5
+#| fig-cap: "Number of very severe each breed of dog caused" 
+#| warning: false
+#| message: false
+#| echo: false
+
+very_severe <- cleaned_data %>%
+  filter(Bite_Circumstance == "VERY SEVERE") %>%
+  group_by(Breed) %>%
+  summarise(Num_very = n())
+
+# Create the bar plot
+ggplot(data = very_severe, aes(x = Breed, y = Num_very, fill = Breed)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Number of 'VERY SEVERE' Reports by Dog Breed",
+       x = "Breed of Dog",
+       y = "Number of 'VERY SEVERE' Reports") +
+  theme_minimal() +
+  theme(legend.position = "none")
+```
 
 # References
 
