--- a/paper/references.bib
+++ b/paper/references.bib
@@ -69,7 +69,7 @@
     url = {https://CRAN.R-project.org/package=here},
   }
   
-@Misc{globalnews2023,
+@Misc{woman,
     author = {Ryan Rocca & Ahmar Khan},
     title = {Woman dragged to ground, suffers life-altering injuries in Toronto dog attack},
     year = {2023},
@@ -107,4 +107,29 @@
     year = {2023},
     url = {https://open.toronto.ca/dataset/dogs-issued-dangerous-dog-orders/},
     note = {Accessed: 2023-09-24}
+}
+
+@Misc{child,
+    author = {{Global News}},
+    title = {Child bitten by dog at Midland and Lawrence in Scarborough},
+    year = {2023},
+    url = {https://globalnews.ca/news/9798318/child-bit-dog-midland-lawrence-scarborough/},
+    note = {Accessed: 2023-09-27}
+}
+
+@Manual{knitr,
+    title = {knitr: A General-Purpose Package for Dynamic Report
+      Generation in R},
+    author = {Yihui Xie},
+    year = {2023},
+    note = {R package version 1.45},
+    url = {https://yihui.org/knitr/},
+  }
+  
+@Misc{level,
+    author = {{City of Toronto}},
+    title = {Dog Bites or Attacks},
+    year = {2024},
+    url = {https://www.toronto.ca/community-people/animals-pets/pets-in-the-city/dogs-in-the-city/dog-bites-or-attacks/},
+    note = {Accessed: 2024-09-27}
 }
