small error in paper.qmd fixed

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -36,7 +36,7 @@ There are a lot of people reporting they are getting attack by dogs every year, 
 
 In this paper, The data set **"About registry of Dogs Subject to and Issued a Dangerous Dog Order" **[@toronto2023] that records the dogs that have been issued as dangerous dog and the reports of these dogs from 2017 to 2024 has been used to test which area in Toronto has more dog attacks and what breed of dogs are tend to have more aggressive desire, in other words, more dangerous to be close to these breed. This paper finds evidence to suggest that dogs with bulldog and shepherd gene are more aggressive and dog with bulldog gene are having worse bite circumstances. Owners of these breed of dogs should spend more time on training these dog and people should avoid getting too close to these dogs. The area with postal code "M4L" are having more dangerous dogs than other areas, people needs to be more careful when they are in this area.
 
-The structure of the paper are as follows: @sec-data-overview introduced the data, programming language and package used in the paper.@sec-data-cleandata introduces that what has been done to clean the original data and variables we are using to do the comparison. Also, what has been done to reduced the variable in the original data.  @sec-results are having tests and compare the variables from the data. Brief explain about the result we get after the tests. @secdiscussion discusses the tests in details and find results of dangerous breed and area. @sec-limitations discusses the limitation of the data and analyze. Introduce the next step to make the paper more reliable.
+The structure of the paper are as follows: @sec-data-overview introduced the data, programming language and package used in the paper.@sec-data-cleandata introduces that what has been done to clean the original data and variables we are using to do the comparison. Also, what has been done to reduced the variable in the original data.  @sec-results are having tests and compare the variables from the data. Brief explain about the result we get after the tests. @sec-discussion discusses the tests in details and find results of dangerous breed and area. @sec-limitations discusses the limitation of the data and analyze. Introduce the next step to make the paper more reliable.
 
 # Data {#sec-data}
 
